--- a/SWE_JiaYiZhang.tex
+++ b/SWE_JiaYiZhang.tex
@@ -74,7 +74,8 @@
   \headedsubsection
     {Artificial Intelligence}
     {01/2019 – 03/2019}
-    {\bodytext{Implemente Q-Learning from scratch\\Outperform 80\% of class\\Consistently beat Monte Carlo algortithm}}
+    {\bodytext{Java\\
+    Implemente Q-Learning from scratch\\Outperform 80\% of class\\Consistently beat Monte Carlo algortithm}}
 }
 \vspace{0.4em}
 
@@ -83,80 +84,52 @@
   {\textsc{Group Project}} {%
   \headedsubsection
     {Machine Learning}
-    {Apr \apo12 -- Oct \apo16}
-    {\bodytext{Hoppinger is an open source minded \emph{full-service} internet agency.  In charge of the dev't capacity, reporting directly to managing director and co-founder Marijn Bom.  Drafted and carried out the technical company vision.  Inspired both devs and management to look beyond \acr{PHP}. Grew custom app dev't into a serious revenue segment.  Implemented continuous delivery. Created and taught several in-house courses.  Enacted testing strategy.  Recruited viciously, in part by organizing educational events.  Restructured to fixed team configurations.  Introduced DevOps (Puppet).  Helped to set up the \textit{Customer Support} and \textit{IT ops} dep'ts.  Contributed to the sales pitches for, and in charge of the software architecture for, all technically challenging projects. Involved with many company-wide process improvements.}}
-}
+    {09/2019 - 12/2019}
+    {\bodytext{
+      Tensorflow2.0,\ Python\ 3\\
+      Using LSTM model to predict number of trips per day in future two weeks.\\
+      Achieved average error lower than 15 trips each day.}}}
+
 
 \headedsection
-  {\href{http://www.hr.nl}{Rotterdam University of Applied Sciences}}
-  {\textsc{Rotterdam, The Netherlands}} {%
-  \headedsubsection
-    {Member of the Professional Advisory Board \textnormal{\textit{(till Sep \apo16)}} \& Guest Lecturer}
-    {Sep \apo12 -- present}
-    {%\bodytext{Introductory lecture on history of software development and open source for 1\textsuperscript{st} year CS students.}
-    }
-}
-
-\headedsection  % sets the header for the section and includes any subsections
-  {\href{http://www.intellecap.com}{Intellecap}/\href{http://istpl.in}{\acr{ISTPL}}}
-  {\textsc{Mumbai, Pune \& Hyderabad, India}} {%
-
-  \headedsubsection  % sets the header for a subsection and contains usually body text
-    {\acr{IT} Consultant}
-    {Nov \apo08 -- Feb \apo09}
-    {\bodytext{Intellecap is a financial advisory firm serving corporates, non-profits and governments working in developing markets. Assessed their software development team and processes. Trained their devs. Architected and built several web apps; one being Mostfit an open source \acr{MIS} for \href{http://en.wikipedia.org/wiki/Microcredit}{microcredit} lenders.}}
+  {Foothill-De Anza College schedule builder}
+  {\textsc{Individual Project}} {%
 
   \headedsubsection
-    {\acr{IT} \& Strategy Consultant}
-    {Jan \apo10 -- Aug \apo11}
-    {\bodytext{Called in to solve several technical challenges and develop growth strategies regarding Mostfit.}}
+    {Web Application}
+    {01/2017 - 02/2017}
+    {\bodytext{Materialize.css,\ beego,\ golang\\
+    A website that allows people build their schedule. Used by around 10 people in Feburary and March 2017.}}
+  }
 
-  \headedsubsection
-    {CTO}
-    {Oct \apo11 -- Feb \apo12}
-    {\bodytext{Proudly joined the \acr{C}-family of Intellicap's software division, ISTPL, to make \href{https://github.com/Mostfit/mostfit}{Mostfit} the nr.1 software solution for micro credit lenders around the globe.  Shut down in six months due to lack of investment.}}
-}
+  \headedsection
+  {\href{https://github.com/itzMeerkat/PrintableNote}{Document Image Background Removal and Text Color Enhancement}}
+  {\textsc{Individual project}} {
+    \headedsubsection
+    {Computer Vision}
+    {May 2015 -- Apr 2016}
+    {\bodytext{C++, OpenCV, Qt\\An image processing method that detects and removes the background nicely despite of lighting condition of the image, also enhance the color of foreground texts by unifying their color.}}
+  }
 
-\headedsection
-  {\href{http://www.zarafa.com}{Zarafa}}
-  {\textsc{Delft, The Netherlands}} {%
-  \headedsubsection
-    {\acr{QA} \& Release Manager}
-    {Dec \apo09 -- Jan \apo11}
-    {\bodytext{Before 2015, when Zarafa entered in an extensive parnership with Amazon, it was probably the fastest growing open source product company in Europe, making a drop-in replacement for MS Exchange.  Reported directly to the \acr{CEO}, Brian Josef, and worked closely with the \acr{CTO}, Steve Hardy.  In charge of the 6 men strong QA dep't.  Established test automation and continuous integration.  Architected and implemented an all-integrated documentation and translation system that employed community effort.  Got sent to India to analyse and streamline their outsourced operations.}}
-}
-
-\headedsection
-  {\href{http://www.dharmapublishing.com}{Dharma Publishing}}
-  {\textsc{near San Francisco, \acr{USA}}} {%
-  \headedsubsection
-    {\acr{IT} Consultant}
-    {Nov \apo09 -- Dec \apo09}
-    {\bodytext{Dharma Publishing, the worlds largest Buddhist publisher, is a non-profit, all-volunteer organisation to preserve Tibetan buddhism and culture. Built their web shop, improved related processes.}}
-}
-
-\spacedhrule{-0.2em}{-0.4em}
+\spacedhrule{0.2em}{-0.4em}
 
 
 \roottitle{Skills}
 
-\inlineheadsection  % special section that has an inline header with a 'hanging' paragraph
-  {Technical expertise:}
-  {Leading and recruiting teams of software engineers.  Big fan of Agile methodologies, continuous delivery and functional programming.  Enjoys writing Ruby/\nsp Python/\nsp Java/\nsp \CPP~and Haskell.  Solid knowledge of the full web technology stack.  Able to architect \textit{and} implement distributed/\acr{HA} systems.  Strong Linux administration skills (e.g.\ Bash scripting, Apache/\acr{NGINX}, Postgres/My/No\acr{SQL}, ElasticSearch).  Well experienced with virtualization/containerization (Docker/Kubernetes, \acr{KVM}, Xen and several \acr{AWS} solutions) and DevOps (Puppet).  Emacs user.}
-
-\vspace{0.5em}
 \inlineheadsection
-  {Natural languages:}
-  {Dutch \emph{(mother tongue)}, English \emph{(full professional proficiency)}, German \emph{(limited working proficiency)}, French \emph{(elementary proficiency)} and Mandarin Chinese \emph{(beginner)}.}
-
-
+  {Programming languages:}
+  {C++ for 9 years, Python, Golang, Java, JavaScript, Matlab, OpenCV}
+\inlineheadsection
+  {Frameworks used:}
+  {Tensorflow2.0, PyTorch, React.js, Django, Flask, express.js, Flutter, Vue.js}
+\inlineheadsection{Leadership:}{Experience in leading a group of 9 people from various culture.}
 \spacedhrule{1.6em}{-0.4em}
 
 \roottitle{Interests}
 
 \inlineheadsection
-  {Non-exhaustive and in alphabetical order:}
-  {art, Buddhism, cryptography, functional programming, Go (board game), history, music (from classical and jazz to Berlin-techno), \acr{NLP}, permaculture, philosophy, rock climbing, startups, travel, typography (e.g.\ graphic design, \LaTeX), \acr{UX}-design and vegan cuisine.}
+  {}
+  {Music, Historical fencing, Travel, Reading}
 
 
 \end{document}
