--- a/SWE_JiaYiZhang.tex
+++ b/SWE_JiaYiZhang.tex
@@ -45,24 +45,24 @@
 \headedsection
 {University of California, Davis | GPA 3.504  }
 {\textsc{Davis, CA United States}} {
-	
-	\headedsubsection
-	{Bachelor degree: Major in Computer Science}
-	{2018 -- 2020}
-	{\bodytext{
-    Reinforcment learning for AI; Algorithms in computer vision; Machine learning algorithms from scratch\\
-    Learned how to lead a team in project and how to set up procedure to approach the solution}
+  
+  \headedsubsection
+  {Bachelor degree: Major in Computer Science}
+  {2018 -- 2020}
+  {\bodytext{
+    Reinforcement learning for AI; Algorithms in computer vision; Machine learning algorithms from scratch\\
+    Learned how to lead a team in project and how to set up a procedure to approach the solution}
   }
 }
 
 \headedsection
 {De Anza college}
 {\textsc{Cupertino, CA United States}} {
-	\headedsubsection
-	{Associate degree: Major in Computer Science}
-	{2016 -- 2018}
-	{\bodytext{Assembly language, Java, C/C++\\Calculus and discrete math}
-	}
+  \headedsubsection
+  {Associate degree: Major in Computer Science}
+  {2016 -- 2018}
+  {\bodytext{Assembly language, Java, C/C++\\Calculus and discrete math}
+  }
 }
 \spacedhrule{0.9em}{-0.4em}
 
@@ -74,44 +74,54 @@
   \headedsubsection
     {Artificial Intelligence}
     {01/2019 – 03/2019}
-    {\bodytext{Java\\
-    Implemente Q-Learning from scratch\\Outperform 80\% of class\\Consistently beat Monte Carlo algortithm}}
+    {\bodytext{
+    An AI based on Q-learning for game connect-4. Implemented form scratch using Java. Achieved top 7 in the in-class competition, which consist of around 50 groups.}}
 }
-\vspace{0.4em}
+\vspace{0.5em}
 
 \headedsection
   {\href{https://github.com/itzMeerkat/UCDavis-ECS171-2019Fall-Project}{BayAreaBikeShare Trip Prediction}}
-  {\textsc{Group Project}} {%
+  {\textsc{Group Project}} {
   \headedsubsection
     {Machine Learning}
     {09/2019 - 12/2019}
     {\bodytext{
-      Tensorflow2.0,\ Python\ 3\\
-      Using LSTM model to predict number of trips per day in future two weeks.\\
-      Achieved average error lower than 15 trips each day.}}}
+      Research to find the optimal predictor for this job, which is to predict the number of trips started on a certain day based on previous data. Eventually, we use LSTM to make the prediction and achieved an error of fewer than 15 trips for each day.}}
+  }
 
-
+\vspace{0.5em}
 \headedsection
-  {Foothill-De Anza College schedule builder}
-  {\textsc{Individual Project}} {%
-
+  {\href{https://github.com/itzMeerkat/FHDAClassViewer}{Foothill-De Anza College schedule builder}}
+  {\textsc{Individual Project}} {
   \headedsubsection
     {Web Application}
     {01/2017 - 02/2017}
-    {\bodytext{Materialize.css,\ beego,\ golang\\
-    A website that allows people build their schedule. Used by around 10 people in Feburary and March 2017.}}
+    {\bodytext{
+    A website that allows people build their schedule. With user friendly interface and interacting logic. Used by around 10 people in Feburary and March 2017.}}
   }
 
-  \headedsection
+\vspace{0.5em}
+\headedsection
   {\href{https://github.com/itzMeerkat/PrintableNote}{Document Image Background Removal and Text Color Enhancement}}
   {\textsc{Individual project}} {
     \headedsubsection
     {Computer Vision}
-    {May 2015 -- Apr 2016}
-    {\bodytext{C++, OpenCV, Qt\\An image processing method that detects and removes the background nicely despite of lighting condition of the image, also enhance the color of foreground texts by unifying their color.}}
-  }
+    {02/2015 -- 05/2015}
+    {\bodytext{An image processing method that detects and removes the background nicely despite lighting condition of the image, also enhance the color of foreground texts by unifying their color.}}
+}
 
-\spacedhrule{0.2em}{-0.4em}
+\vspace{0.5em}
+\headedsection
+  {\href{https://github.com/itzMeerkat/ambiguous-date-picker}{Date Phrase Extraction in Natural Language}}
+  {\textsc{Individual project}} {
+    \headedsubsection
+    {Natural Language Processing}
+    {07/2019 -- Present}
+    {\bodytext{An algorithm that parses a sentence in English using the Viterbi algorithm and custom CFG. This algorithm can match multiple phrases in one sentence and calculate what is the date those phrases referring to.}}
+}
+
+\vspace{0.5em}
+\spacedhrule{0em}{-0.4em}
 
 
 \roottitle{Skills}
@@ -121,8 +131,9 @@
   {C++ for 9 years, Python, Golang, Java, JavaScript, Matlab, OpenCV}
 \inlineheadsection
   {Frameworks used:}
-  {Tensorflow2.0, PyTorch, React.js, Django, Flask, express.js, Flutter, Vue.js}
-\inlineheadsection{Leadership:}{Experience in leading a group of 9 people from various culture.}
+  {Tensorflow2.0, PyTorch, React.js, Django, Flask, express.js, Flutter, Vue.js, Beego}
+\inlineheadsection{Leadership:}{Experience in leading a group of 9 people from various culture; Leads a group of 5 currently working on a rating website.}
+\inlineheadsection{LeetCode:}{Easy: 6; Medium: 14; Hard: 15}
 \spacedhrule{1.6em}{-0.4em}
 
 \roottitle{Interests}
