--- a/SWE_JiaYiZhang.tex
+++ b/SWE_JiaYiZhang.tex
@@ -37,7 +37,7 @@
 
 
 \roottitle{Objective}
-\noindent \emph{To make exciting creation using my skills and determination.}
+\noindent \emph{Currently seeking Full-time opportunities in Software Engineering or Data Science. Starting Fall 2020.}
 
 \spacedhrule{0.9em}{-0.4em}
 \roottitle{Education}
@@ -50,7 +50,7 @@
   {Bachelor degree: Major in Computer Science}
   {2018 -- 2020}
   {\bodytext{
-    Reinforcement learning for AI; Algorithms in computer vision; Machine learning algorithms from scratch\\
+    Reinforcement learning for AI; Algorithms in computer vision; Machine learning algorithms\\
     Learned how to lead a team in project and how to set up a procedure to approach the solution}
   }
 }
@@ -74,8 +74,13 @@
   \headedsubsection
     {Artificial Intelligence}
     {01/2019 – 03/2019}
-    {\bodytext{
-    An AI based on Q-learning for game connect-4. Implemented form scratch using Java. Achieved top 7 in the in-class competition, which consist of around 50 groups.}}
+    {
+      \begin{itemize}
+      \item AI based on Q-learning for game connect-4
+      \item Implemented form scratch using Java
+      \item Achieved top 7 in the in-class competition, which consist of around 50 groups
+      \end{itemize}
+    }
 }
 \vspace{0.5em}
 
@@ -85,8 +90,11 @@
   \headedsubsection
     {Machine Learning}
     {09/2019 - 12/2019}
-    {\bodytext{
-      Research to find the optimal predictor for this job, which is to predict the number of trips started on a certain day based on previous data. Eventually, we use LSTM to make the prediction and achieved an error of fewer than 15 trips for each day.}}
+    {\begin{itemize}
+      \item Real world data cleaning
+      \item Using LSTM model to predict time series data
+      \item Data visualization and feature engineering
+    \end{itemize}}
   }
 
 \vspace{0.5em}
@@ -96,8 +104,11 @@
   \headedsubsection
     {Web Application}
     {01/2017 - 02/2017}
-    {\bodytext{
-    A website that allows people build their schedule. With user friendly interface and interacting logic. Used by around 10 people in Feburary and March 2017.}}
+    {\begin{itemize}
+      \item Using Vue.js as frontend and golang with beego as backend
+      \item Web app that help student organize their schedule at De Anza College
+      \item Achieved around 10 active users
+    \end{itemize}}
   }
 
 \vspace{0.5em}
@@ -107,7 +118,11 @@
     \headedsubsection
     {Computer Vision}
     {02/2015 -- 05/2015}
-    {\bodytext{An image processing method that detects and removes the background nicely despite lighting condition of the image, also enhance the color of foreground texts by unifying their color.}}
+    {\begin{itemize}
+      \item Written in C++ with OpenCV and Qt
+      \item Remove image background and enhance text
+      \item Applied novel approaches to improve performance
+    \end{itemize}}
 }
 
 \vspace{0.5em}
@@ -117,7 +132,11 @@
     \headedsubsection
     {Natural Language Processing}
     {07/2019 -- Present}
-    {\bodytext{An algorithm that parses a sentence in English using the Viterbi algorithm and custom CFG. This algorithm can match multiple phrases in one sentence and calculate what is the date those phrases referring to.}}
+    {\begin{itemize}
+      \item Implemented from scratch using python
+      \item Achieved high performance that allows real time application
+      \item Detect and extract date time information in an English sentence
+    \end{itemize}}
 }
 
 \vspace{0.5em}
@@ -129,11 +148,17 @@
 \inlineheadsection
   {Programming languages:}
   {C++ for 9 years, Python, Golang, Java, JavaScript, Matlab, OpenCV}
+  \vspace{0.5em}
+\inlineheadsection
+  {Languages:}
+  {Native in Chinese, fluent in English}
+  \vspace{0.5em}
 \inlineheadsection
   {Frameworks used:}
   {Tensorflow2.0, PyTorch, React.js, Django, Flask, express.js, Flutter, Vue.js, Beego}
+  \vspace{0.5em}
 \inlineheadsection{Leadership:}{Experience in leading a group of 9 people from various culture; Leads a group of 5 currently working on a rating website.}
-\inlineheadsection{LeetCode:}{Easy: 6; Medium: 14; Hard: 15}
+
 \spacedhrule{1.6em}{-0.4em}
 
 \roottitle{Interests}
