--- a/GRAD_JiayiZhang.tex
+++ b/GRAD_JiayiZhang.tex
@@ -38,7 +38,7 @@
 
 
 \roottitle{Objective}
-\noindent \emph{Currently seeking Full-time opportunities in Software Engineering or Data Science. Starting Fall 2020.}
+\noindent \emph{Currently seeking for Master Degree in Computer Science or Data Science.}
 
 \spacedhrule{0.9em}{-0.4em}
 \roottitle{Education}
@@ -70,6 +70,16 @@
 \roottitle{Experience}
 
 \headedsection
+{Computer Science Department Tutor}
+{01/2020 - 04/2020} {
+
+
+{\begin{itemize}
+	\item Tutoring Artificial Intelligence, Computer Vision and Operating System
+\end{itemize}}
+}
+\vspace{0.5em}
+\headedsection
   {Reinforcement Learning AI for Connect-4}
   {\textsc{Group Project}} {
   \headedsubsection
@@ -99,19 +109,7 @@
     \end{itemize}}
   }
 
-\vspace{0.5em}
-\headedsection
-  {\href{https://github.com/itzMeerkat/FHDAClassViewer}{Foothill-De Anza College schedule builder}}
-  {\textsc{Individual Project}} {
-  \headedsubsection
-    {Web Application}
-    {01/2017 - 02/2017}
-    {\begin{itemize}
-      \item Using Vue.js as frontend and golang with beego as backend
-      \item Helping student organize their schedule at De Anza College
-      \item Achieved around 10 active users
-    \end{itemize}}
-  }
+
 
 \vspace{0.5em}
 \headedsection
@@ -159,7 +157,7 @@
   {Frameworks used:}
   {Tensorflow2.0, PyTorch, React.js, Flask, express.js, Flutter, Vue.js, Beego, FastAPI}
   \vspace{0.5em}
-\inlineheadsection{Leadership:}{Experience in leading a group of 9 people from various culture; Leads a group of 5 currently working on a rating website.}
+\inlineheadsection{Leadership:}{Lead a group of 9 people from various culture in machine learning project; Lead a group of 5 currently working on a rating website.}
 
 \spacedhrule{1.6em}{-0.4em}
 
